--- a/News-Web-App/templates/index.html
+++ b/News-Web-App/templates/index.html
@@ -20,8 +20,8 @@
 
     <div class="row">
         <div class="mt-3 pt-3 mx-auto text-center">
-                <h1 class="display-4">Get News</h1>
-            <p class="lead">Get most relevent news for the give keywords :  {{keywords}}</p>
+                <h1 class="display-4">NewsGator</h1>
+            <p class="lead">Get most relevent news for the given keywords :  {{keywords}}</p>
         </div>
     </div>
     
