--- a/News-Web-App/templates/test.html
+++ b/News-Web-App/templates/test.html
@@ -14,8 +14,8 @@
 
     <div class="row">
         <div class="mt-3 pt-3 mx-auto text-center">
-            <h1 class="display-4">Get News</h1>
-            <p class="lead">Get most relevent news for the give keywords</p>
+            <h1 class="display-4">NewsGator</h1>
+            <p class="lead">Get most relevent news for the given keywords</p>
         </div>
     </div>
     <form style="margin-top:50px" action = "/" method = "post">
